# ublarcvserver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  setup.sh
app/UBInfill/: UBInfillClient.py  UBInfillWorker.py  run_ubinfill_client.py  start_ubinfill_worker.py  ubsplit.cfg
app/UBInfill/clustertest/: UBInfillClient.py  UBInfillWorker.py  run_infill_client.sh  run_infill_worker.sh  run_ubinfill_client.py  start_ubinfill_worker.py  start_ublarcvserver_infill_client.py  start_ublarcvserver_infill_worker.py  submit_broker.sh  submit_worker_pgpu03.sh  tufts.conf  ubsplit.cfg
app/UBInfill/sparseinfill/: README.md  UBInfillSparseClient.py  UBInfillSparseWorker.py  prep_pgpu03_workers.sh  run_infill_worker.sh  run_sparse_ubinfill_client_nudot.py  run_sparseinfill_client.sh  run_sparseinfill_worker.sh  run_ubinfill_client.py  start_sparse_ubinfill_worker_nudot.py  start_sparseinfill_worker.py  start_ublarcvserver_infill_worker.py  start_ublarcvserver_sparseinfill_client.py  start_ublarcvserver_sparseinfill_worker.py  submit_broker.sh  submit_infill_tuftscluster_worker.sh  submit_worker_pgpu03.sh  ubsplit.cfg
app/sparseSSNet/: SparseSSNetClient.py  SparseSSNetWorker.py  setenv.sh  start_sparse_uresnet_client.py  start_sparse_uresnet_worker.py
app/sparseSSNet/weights/: get_weights.sh
app/ublarflow/: .gitignore  UBDenseLArFlowClient.py  UBDenseLArFlowWorker.py  UBSparseLArFlowClient.py  UBSparseLArFlowWorker.py  check_dense_larflow_output.py  configure_ubdl_all.sh  run_dense_ublarflow_client.py  run_sparse_ublarflow_client.py  run_ublarflow_client.py  setenv.sh  setenv_all.sh  start_dense_ublarflow_worker.py  start_sparse_ublarflow_worker.py  start_ublarflow_worker.py
app/ublarflow/scripts/: run_denselarflow_worker_remote.sh  run_denselarflow_worker_tufts.sh
app/ubmrcnn/: .gitignore  README.md  UBMRCNNClient.py  UBMRCNNWorker.py  configure_ubdl_all.sh  init_paths_dispatcher.py  mills_config_0.yaml  mills_config_1.yaml  mills_config_2.yaml  oldmills_config_0.yaml  oldmills_config_1.yaml  oldmills_config_2.yaml  run_ubmrcnn_client.py  run_ubmrcnn_client.sh  run_ubmrcnn_worker.sh  setenv.sh  start_ublarcvserver_ubmrcnn_client.py  start_ublarcvserver_ubmrcnn_worker.py  start_ubmrcnn_worker.py  submit_broker.sh  submit_worker_pgpu03.sh  wire
app/ubmrcnn/new_start/: prep_pgu03_workers.sh  (+4 more)
app/ubssnet/: UBSSNetClient.py  UBSSNetWorker.py  run_ubssnet_client.py  start_broker_worker.py  start_ubssnet_worker.py
cmake/: Config.cmake.in
networks/: mask-rcnn.pytorch
networks/infill/: common_layers.py  sparseinfill.py  ub_uresnet_infill.py
networks/larflow/: setenv.sh
python/ublarcvserver/: DummyPyWorker.py  __init__.py  broker.py  mdpyworkerbase.py  start_broker.py
tests/: py_dummy_test.py  run_dummy_setup.py  test_larcv_client.py
ublarcvserver/app/: CMakeLists.txt  DummyClient.cxx  DummyClient.h  DummyWorker.cxx  DummyWorker.h  LArCVClient.cxx  LArCVClient.h  LinkDef.h  MDBroker.h  MirrorWorker.cxx  MirrorWorker.h
ublarcvserver/core/: CMakeLists.txt  LinkDef.h  MDBroker.cxx  MDClientBase.cxx  MDClientBase.h  MDWorkerBase.cxx  MDWorkerBase.h  MDWorkerMsg.h
(+29 files in other folders)
